--- a/frontend/ARAN/src/app/ordentrabajo/nueva/nueva.page.html
+++ b/frontend/ARAN/src/app/ordentrabajo/nueva/nueva.page.html
@@ -1,9 +1,67 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>nueva</ion-title>
+  <ion-toolbar color="primary">
+    <ion-title>Agregar Orden de Trabajo</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+  <form [formGroup]="formNuevaOT">
+    <ion-item>
+      <!-- <ion-label position="floating">Trabajo</ion-label>
+      <ion-input formControlName="trabajo"></ion-input> -->
+      <ion-select placeholder="Trabajo" multiple="true">
+        <ion-select-option value="cilindro">Rectificación Cilindro</ion-select-option>
+        <ion-select-option value="tapa">Rectificación Tapa</ion-select-option>
+        <ion-select-option value="cigueñal">Cigüeñal y Biela</ion-select-option>
+        <ion-select-option value="encamisado">Encamisado Cilindro</ion-select-option>
+      </ion-select>
+    </ion-item>
 
+    <ion-item>
+      <ion-label position="floating">Cliente</ion-label>
+      <ion-input ></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label position="floating">Moto</ion-label>
+      <ion-input ></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label position="floating">Detalle</ion-label>
+      <ion-input formControlName="detalle"></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label position="floating">Precio $</ion-label>
+      <ion-input formControlName="precio" type="number"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating">Entrega $</ion-label>
+      <ion-input formControlName="entrega" type="number"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label>Saldo</ion-label>
+      <ion-input disabled readonly type="number" value="0"></ion-input>
+
+    </ion-item>
+
+    <ion-item>
+    <ion-datetime 
+    presentation="date" 
+    formControlName="fecha_estimada"
+    ></ion-datetime>
+  </ion-item>
+
+  <ion-item>
+    <ion-label>Tarjeta</ion-label>
+    <ion-input formControlName="tarjeta" disabled readonly></ion-input>
+
+  </ion-item>
+
+  <ion-item>
+    <ion-button color="primary">Guardar</ion-button>
+  </ion-item>
+
+  </form>
 </ion-content>
