ts en camino, agregando campos a la query en api

--- a/frontend/ARAN/src/app/ordentrabajo/retirar/retirar.page copy.html
+++ b/frontend/ARAN/src/app/ordentrabajo/retirar/retirar.page copy.html
@@ -55,15 +55,21 @@
     </ion-item>
 
     <ion-item>
-      <ion-label position="floating">Entrega $</ion-label>
+      <ion-label position="floating">Entregó $</ion-label>
       <ion-label>{{ot.entrega}}</ion-label>
       
     </ion-item>
 
     <ion-item>
-      <ion-label>Saldo $</ion-label>
+      <ion-label>Pendiente a Saldar $</ion-label>
       <!-- calcular saldo -->
       <ion-label></ion-label>
+    </ion-item>
+
+    <ion-item>
+      <ion-label>Cancela con: </ion-label>
+      <!--  -->
+      <ion-input formControlName="otpapel" type="number"></ion-input>  
     </ion-item>
 
     <ion-item>
