--- a/frontend/ARAN/src/app/ordentrabajo/retirar/retirar.page.html
+++ b/frontend/ARAN/src/app/ordentrabajo/retirar/retirar.page.html
@@ -5,10 +5,50 @@
 </ion-header>
 
 <ion-content>
+  <form [formGroup]="formRetirarOT" (ngSubmit)="onSubmit()">
+  
+  <ion-item>
+    <ion-label>Tarjeta N°</ion-label>
+    <ion-input formControlName="tarjeta" readonly></ion-input>
+  </ion-item>
+
 
   <ion-button id="addNumeroTarjeta" (click)="addNumeroTarjeta()">Buscar Tarjeta</ion-button>
   <ion-button id="stopSearch" (click)="stopSearch()">Cancelar</ion-button>
 
+  <ion-item>
+    <ion-label>Precio: </ion-label>
+    <ion-input formControlName="precio" readonly></ion-input>  
+  </ion-item>
+  <ion-button id="modificarPrecio" (click)="modificarPrecio()">total</ion-button>
+
+
+
+  <ion-item>
+    <ion-label>Entrega: </ion-label>
+    <ion-input formControlName="entrega" readonly></ion-input>  
+  </ion-item>
+
+  <ion-item>
+    <ion-label>Cancela con: </ion-label>
+    <!-- agregar la suma al campo 'entrega' 
+    agregar tmb linea en campo 'descripcion' con el detalle de esta suma y fecha -->
+    <ion-input formControlName="cancela" type="number"></ion-input>  
+  </ion-item>
+  <ion-button id="cantelaTotalSaldo" (click)="cantelaTotalSaldo()">total</ion-button>
+
+
+  <ion-item>
+    <ion-label>Observaciones: </ion-label>
+    <!-- concatenar con el campo detalles a la hora de actualizar en la db -->
+    <ion-input formControlName="observaciones" type="number"></ion-input>  
+  </ion-item>
+
+  <ion-item>
+    <ion-button type="submit" color="primary">Retirar</ion-button>
+  </ion-item>
+
+  </form>
 
 </ion-content>
 
