--- a/frontend/ARAN/src/app/ordentrabajo/listar/listar.page.html
+++ b/frontend/ARAN/src/app/ordentrabajo/listar/listar.page.html
@@ -1,6 +1,10 @@
-<ion-header>
+<ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>Listado de Ordenes de Trabajo</ion-title>
+    <ion-title size="large">ORDENES DE TRABAJO</ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button color="primary" menuId="sideMenu">
+      </ion-menu-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
