--- a/frontend/ARAN/src/app/ordentrabajo/nueva/nueva.page.html
+++ b/frontend/ARAN/src/app/ordentrabajo/nueva/nueva.page.html
@@ -1,6 +1,10 @@
-<ion-header>
-  <ion-toolbar color="primary">
-    <ion-title>Nueva Orden de Trabajo</ion-title>
+<ion-header [translucent]="true">
+  <ion-toolbar>
+    <ion-title size="large">NUEVA ORDEN DE TRABAJO</ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button color="primary" menuId="sideMenu">
+      </ion-menu-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
