--- a/frontend/ARAN/src/app/app.component.html
+++ b/frontend/ARAN/src/app/app.component.html
@@ -1,3 +1,5 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <app-sidenav></app-sidenav>
+<app-sidenav></app-sidenav>
+  <ion-router-outlet id="main-content"></ion-router-outlet>
 </ion-app>
