--- a/frontend/ARAN/src/app/ordentrabajo/retirar/retirar.page.html
+++ b/frontend/ARAN/src/app/ordentrabajo/retirar/retirar.page.html
@@ -1,6 +1,10 @@
-<ion-header>
+<ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>Retirar Trabajo</ion-title>
+    <ion-title size="large">RETIRAR TRABAJO</ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button color="primary" menuId="sideMenu">
+      </ion-menu-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
