--- a/frontend/ARAN/src/app/ordentrabajo/nueva/nueva.page.html
+++ b/frontend/ARAN/src/app/ordentrabajo/nueva/nueva.page.html
@@ -24,14 +24,14 @@
 
 
     <ion-item>
-      <ion-label>N° Orden Trabajo (papel)</ion-label>
-      <ion-input formControlName="otpapel" type="number"></ion-input>  
+      <ion-label>N° Orden Papel</ion-label>
+      <ion-input formControlName="ordenPapel"></ion-input>  
     </ion-item>
 
     <ion-item>
       <!-- <ion-label position="floating">Trabajo</ion-label>
       <ion-input formControlName="trabajo"></ion-input> -->
-      <ion-select placeholder="Trabajo" multiple="true" formControlName="trabajo">
+      <ion-select placeholder="Trabajo" multiple="false" formControlName="trabajo">
         <ion-select-option value="cilindro">Rectificación Cilindro</ion-select-option>
         <ion-select-option value="tapa">Rectificación Tapa</ion-select-option>
         <ion-select-option value="cigueñal">Cigüeñal y Biela</ion-select-option>
