buscar/agregar clientes, avanzo

--- a/frontend/ARAN/src/app/cliente/nuevo/nuevo.component.html
+++ b/frontend/ARAN/src/app/cliente/nuevo/nuevo.component.html
@@ -9,7 +9,7 @@
 </ion-header>
 
 <ion-content>
-<form action="">
+<form [formGroup]="formCliente" (ngSubmit)="onSubmit()">
   <!-- 
     "nombre": "",
 			"apellido": "",
@@ -17,20 +17,21 @@
 			"celular": 
    -->
   <ion-item>
-    <ion-label position="floating">Nombre</ion-label>
-    <ion-input></ion-input>
+    <ion-label 
+      position="floating">Nombre</ion-label>
+    <ion-input formControlName="nombre"></ion-input>
   </ion-item>
   <ion-item>
     <ion-label position="floating">Apellido</ion-label>
-    <ion-input></ion-input>
+    <ion-input formControlName="apellido"></ion-input>
   </ion-item>
   <ion-item>
     <ion-label position="floating">DNI</ion-label>
-    <ion-input></ion-input>
+    <ion-input formControlName="dni"></ion-input>
   </ion-item>
   <ion-item>
     <ion-label position="floating">Celular</ion-label>
-    <ion-input></ion-input>
+    <ion-input formControlName="celular"></ion-input>
   </ion-item>
 
   <ion-item>
