--- a/frontend/ARAN/src/app/ordentrabajo/nueva/nueva.page.html
+++ b/frontend/ARAN/src/app/ordentrabajo/nueva/nueva.page.html
@@ -42,6 +42,7 @@
     <ion-item>
       <ion-label position="floating">Cliente</ion-label>
       <ion-input formControlName="cliente"></ion-input>
+      <ion-button (click)="openModalClientes()"> Buscar </ion-button>
     </ion-item>
 
     <ion-item>
