mustro datos cliente seleccionado en Nueva OT UI

--- a/frontend/ARAN/src/app/cliente/nuevo/nuevo.component.html
+++ b/frontend/ARAN/src/app/cliente/nuevo/nuevo.component.html
@@ -83,7 +83,13 @@
       [reorderable]="reorderable"
       [selected]="selected"
       (activate)="onActivate($event)"
+      
+      
     >
+    <!-- 
+      (select)="onSelect($event)"
+      [selectionType]="SelectionType.single"
+     -->
     </ngx-datatable>
   </div>
   <!-- END NGX DATATABLE -->
