--- a/frontend/ARAN/src/app/ordentrabajo/nueva/nueva.page.html
+++ b/frontend/ARAN/src/app/ordentrabajo/nueva/nueva.page.html
@@ -39,7 +39,11 @@
       </ion-select>
     </ion-item>
 
-    <ion-label position="floating">Cliente</ion-label>
+    <!-- CLIENTES -->
+    <ion-item>
+      <ion-button (click)="openModalClientes()"> Agregar Cliente </ion-button>
+    </ion-item>
+
     <ion-list>
       <ion-item>
         <ion-label>Nombre</ion-label>
@@ -59,23 +63,42 @@
 
     </ion-list>
 
+    <!-- MOTOS -->
     <ion-item>
-      <ion-button (click)="openModalClientes()"> Buscar </ion-button>
+      <ion-button (click)="openModalMotos()"> Agregar Moto </ion-button>
     </ion-item>
 
-    <ion-item>
-      <ion-label position="floating">Moto</ion-label>
-      <ion-input formControlName="moto"></ion-input>
-    </ion-item>
+    <ion-list>
+      <ion-item>
+        <ion-label>Marca</ion-label>
+        <ion-label>Modelo</ion-label>
+        <ion-label>Cilindrada</ion-label>
+        <ion-label>Anio</ion-label>
+        <ion-label>Observaciones</ion-label>
+      </ion-item>
+    </ion-list>
 
-    <ion-item>
+    <ion-list>
+      <ion-item>
+        <ion-label>{{moto.marca}}</ion-label>
+        <ion-label>{{moto.modelo}}</ion-label>
+        <ion-label>{{moto.cilidrada}}</ion-label>
+        <ion-label>{{moto.anio}}</ion-label>
+        <ion-label class="ion-text-wrap">{{moto.observaciones}}</ion-label>
+      </ion-item>
+
+    </ion-list>
+
+    <!-- REPUESTOS -->
+
+    <!-- <ion-item>
       <ion-label position="floating">Repuestos</ion-label>
       <ion-input formControlName="repuestos"></ion-input>
-    </ion-item>
+    </ion-item> -->
 
     <ion-item>
       <ion-label position="floating">Detalle</ion-label>
-      <ion-input formControlName="detalle"></ion-input>
+      <ion-textarea formControlName="detalle"></ion-textarea>
     </ion-item>
 
     <ion-item>
